k8s/infra/domain/auth/overlays/prod-eu/auth-api-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-api-jwt
spec:
  plugin:
    jwt:
      Required: false
      Keys:
        - http://auth-api-srv.auth.svc.cluster.local:3000/.well-known/jwks.json # Cluster-internal JWKS
      Alg: ES256
      PayloadFields:
        - exp
        - sub
        - aud
        - iss
      Audiences:
        - tma.com
      Issuers:
        - https://tma.com
      ForceRefreshKeys: true
      JwtSources:
        - type: bearer
          key: Authorization
      JwtHeaders:
        X-User-Id: sub
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-api-strip-headers
spec:
  headers:
    customRequestHeaders:
      X-User-Id: ""
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-api-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/auth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-inflight
spec:
  inFlightReq:
    amount: 6
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-ratelimit
spec:
  rateLimit:
    average: 20 # requests_per_second = average / period_in_seconds = 20 / 60 = 0.33 rps
    burst: 40
    period: 1m
    sourceCriterion:
      ipStrategy:
        depth: 1
