k8s/infra/domain/auth/overlays/prod-eu/auth-ns.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: auth
  annotations:
    linkerd.io/inject: enabled
